fix small issues with tsconfig and gitignore

--- a/functions/screenshot/tsconfig.json
+++ b/functions/screenshot/tsconfig.json
@@ -4,12 +4,12 @@
     "module": "NodeNext",
     "rootDir": "src",
     "resolveJsonModule": true,
-    "allowJs": true,
+    "allowJs": false,
     "outDir": "dist",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitAny": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
   }
 }
