--- a/functions/screenshot/package.json
+++ b/functions/screenshot/package.json
@@ -9,15 +9,15 @@
     "dev": "tsc && node dist/main.js"
   },
   "dependencies": {
-    "got": "^13.0.0",
-    "jsdom": "^22.1.0",
-    "node-appwrite": "^11.0.0",
+    "node-cache": "^5.1.2",
     "puppeteer": "13.4.1",
     "puppeteer-screen-recorder": "^2.1.2",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "@types/jsdom": "^21.1.3",
+    "@types/memory-cache": "^0.2.3",
     "@types/node": "^20.6.1"
   }
 }
